icons from lucid add and working

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "again": "^0.0.1",
+    "lucide-react": "^0.441.0",
     "next": "14.2.8",
     "react": "^18",
     "react-dom": "^18"
