--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "again": "^0.0.1",
     "lucide-react": "^0.441.0",
-    "next": "14.2.8",
+    "next": "^14.2.13",
     "react": "^18",
     "react-dom": "^18"
   },
